# Sources for support

module_DATA = \
  modules/Support.rb

client_DATA = \
  clients/support_proposal.rb \
  clients/support_auto.rb \
  clients/support.rb

yncludedir = @yncludedir@/support
ynclude_DATA = \
  include/support/wizards.rb \
  include/support/dialogs.rb \
  include/support/supportconfig_conf.rb \
  include/support/complex.rb \
  include/support/helps.rb

scrconf_DATA = \
  scrconf/supportconfig.scr

desktop_DATA = \
  desktop/support.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common