# Makefile.am for support/src

yncludedir = @yncludedir@/support

ynclude_DATA = 			\
	supportio.ycp		\
	support_askkey.ycp      \
        support_question.ycp    \
	support_send.ycp

client_DATA =			\
	support.ycp

desktop_DATA =			\
	support.desktop

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
